https://www.elastic.co/guide/en/apm/agent/go/current/release-notes.html[elastic.co]
endif::[]

////
[[release-notes-x.x.x]]
==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

[[unreleased]]
=== Unreleased

https://github.com/elastic/apm-agent-go/compare/v2.0.0...main[View commits]

[[release-notes-2.x]]
=== Go Agent version 2.x

[[release-notes-2.0.0]]
==== 2.0.0 - 2022/03/17

- Record `transaction.name` on errors {pull}1177[#(1177)]
- Fix panic in apmgocql {pull}1180[#(1180)]
- Stop recording unused `transaction.duration.*` and `transaction.breakdown.count` metrics {pull}1167[#(1167)]
- Make tracestate parsing more lenient, according to W3c spec, allowing duplicate vendor keys {pull}1183[#(1183)]
- Introduced `transport.NewHTTPTransportOptions` {pull}1168[#(1168)]
- Change `ELASTIC_APM_SPAN_FRAMES_MIN_DURATION` special cases to match agent spec {pull}1188[#(1188)]
- Remove stacktrace.ContextSetter {pull}1187[#(1187)]
- Drop support for versions of Go prior to 1.15.0 {pull}1190[#(1190)]
- Replace apm.DefaultTracer with an initialization function {pull}1189[#(1189)]
- Remove transport.Default, construct a new Transport in each new tracer {pull}1195[#(1195)]
- Add service name and version to User-Agent header {pull}1196[#(1196)]
- Remove WarningLogger, add Warningf methe to Logger {pull}1205[#(1205)]
- Replace Sampler with ExtendedSampler {pull}1206[#(1206)]
- Drop unsampled txs when connected to an APM Server >= 8.0 {pull}1208[#(1208)]
- Removed SetTag {pull}1218[(#1218)]
- Unexport Tracer's fields -- TracerOptions must be used instead {pull}1219[#(1219)]
- Replace `authorization` with `*auth*` pattern for sanitizing field names {pull}1230[#(1230)]

[[release-notes-1.x]]
=== Go Agent version 1.x

[[release-notes-1.15.0]]
==== 1.15.0 - 2021/12/08
